# MoleculaPy

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
MoleculaPy/: cli.py  helpers.py  moleculapy.py  molecule_utils.py
MoleculaPy/data/: smiles_desc_output.csv  smiles_fing_Atom_2048_output.csv  smiles_fing_MACCS_output.csv  smiles_fing_Morgan_1024_output.csv  smiles_fing_atom_1024_output.csv  smiles_sample.csv
PyChem/: cli.py  helpers.py  molecule_utils.py  output.csv  pychem.py
tests/: test_cli.py  test_molecule_utils.py
