[tool.poetry]
name = "MoleculaPy"
version = "0.1.0"
description = ""
authors = ["Kamil Pytlak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2023.3.3"
pandas = "^2.0.3"
tqdm = "^4.66.1"

[tool.poetry.scripts]
moleculapy = "MoleculaPy.moleculapy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
