[tool.poetry]
name = "MoleculaPy"
version = "1.1.2"
description = "A command-line application that utilizes the RDKit library to compute molecular descriptors and fingerprints, aiding in the analysis and characterization of chemical structures"
readme = 'README.md'
license = 'MIT'
authors = ["Kamil Pytlak"]
repository = 'https://github.com/kamilpytlak/MoleculaPy'
keywords = ['cli', 'fingerprints', 'rdkit', 'chemoinformatics', 'qsar', 'molecular-descriptors']
include = ['CHANGELOG.md', 'LICENSE.md']

[tool.poetry.dependencies]
python = "^3.9"
rdkit = "^2023.9.6"
pandas = "^2.2.2"
tqdm = "^4.66.4"

[tool.poetry.scripts]
moleculapy = "MoleculaPy.moleculapy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
