[tool.poetry]
name = "MoleculaPy"
version = "1.1.2"
description = "A command-line application that utilizes the RDKit library to compute molecular descriptors and fingerprints, aiding in the analysis and characterization of chemical structures"
readme = 'README.md'
license = 'MIT'
authors = ["Kamil Pytlak"]
repository = 'https://github.com/kamilpytlak/MoleculaPy'
keywords = ['cli', 'fingerprints', 'rdkit', 'chemoinformatics', 'qsar', 'molecular-descriptors']
include = ['CHANGELOG.md', 'LICENSE.md']

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2024.3.5"
pandas = "^2.2.2"
tqdm = "^4.66.5"

[tool.poetry.scripts]
moleculapy = "MoleculaPy.moleculapy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
